--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,7 +34,7 @@
         "Leer mas >": "Read more >"
     },
     "TouristicTicket": {
-        "Truistic ticket": "Truistic ticket",
+        "Truistic ticket": "Turistic ticket",
         "How much does it cost": "How much does it cost",
         "Nacional": "Peruvian",
         "Extranjero": "Foriegner",
@@ -62,7 +62,7 @@
         "< Previous": "< Previous",
         "Next >": "Next >",
         "Upcoming events": "Upcoming events",
-        "Show full calendar": "Show full calendar",
+        "Show full calendar": "Show all calendar",
         "No upcoming events": "No upcoming events",
         "No events listed or internet conection failed to establish. Please try again later.": "No events listed or internet conection failed to establish. Please try again later."
     },
