--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,12 +4,12 @@
         "Tourístic circuits": "Tourístic circuits",
         "Touristic ticket": "Touristic ticket",
         "News and articles": "News and articles",
-        "Rural turism": "Rural turism",
-        "Cusco calendar": "Cusco calendar",
+        "Rural turism": "Rural tourism",
+        "Cusco calendar": "Full calendar",
         "Cusco emergency directory": "Cusco emergency directory",
-        "Contact": "Contact",
+        "Contact": "Contact us",
         "Change language": "Change language",
-        "Credits": "Credits"
+        "Credits": "App credits"
     },
     "HOME": {
         "Regional Directorate of Foreign Trade and tourism - Cusco": "Regional Directorate of Foreign Trade and tourism - Cusco",
@@ -22,7 +22,7 @@
         "Upcoming events": "Upcoming events",
         "Show full calendar": "Show full calendar",
         "Turistical circuites in Cusco": "Turistical circuites in Cusco",
-        "Show full turistical circuites": "Show full turistical circuites",
+        "Show full turistical circuites": "Show all touristic circuits",
         "Check on your touristic provider": "Check on your touristic provider"
     },
     "BLOG": {
