--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -97,7 +97,7 @@
         "Congratulate Provider": "Felicita un Prestador",
         "Report Message": "Está a punto de denunciar fraude, abuso o mala conducta causada por un proveedor turístico. Por favor sea específico y ayúdenos a erradicar negocios informales y peligrosos del Cusco.",
         "Congratulate Message 1": "Estás aquí porque tienes algo extraordinario que decir sobre",
-        "Congratulate Message 2": "Cuéntanoslo todo para que podamos darles el reconocimiento que merecen..<",
+        "Congratulate Message 2": "Cuéntanoslo todo para que podamos darles el reconocimiento que merecen..",
         "Report Message 1": "Está a punto de denunciar fraude, abuso o mala conducta causada por",
         "Report Message 2": "Por favor sea específico y ayúdenos a erradicar negocios informales y peligrosos de Cusco.",
         "Provider’s company name": "Nombre del del proveedor",
